# glot

./: .buildinfo  .gitignore  CMakeLists.txt  INSTALL.md  README.md  README.rst  commands.html  genindex.html  index.html  installation.html  mkdocs.yml  objects.inv  search.html  searchindex.js  setup.py  sitemap.xml  usage.html
Glot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
_sources/: commands.txt  index.txt  installation.txt  usage.txt
about/: index.html
cdm/algorithms/: index.html
cdm/contexts/: index.html
cdm/overview/: index.html
cdm/parameters/: index.html
comparison/: index.html
docker/container-module/: index.html
docker/fenics/: index.html
docker/overview/: index.html
docs/: commands.rst  conf.py  families.md  gssa-xml.md  index.md  index.rst  installation.rst  usage.rst
docs/cdm/: algorithms.md  overview.md
docs/docker/: fenics.md  overview.md
docs/server/: overview.md
errors/: index.html
families/: index.html
glossia/: CMakeLists.txt
glossia/scripts/: go-smart-simulation-client  go-smart-simulation-server
glot/: CMakeLists.txt  setup.py.in
glot/scripts/: glot  go-smart-simulation-client
gssa/: CMakeLists.txt  setup.py.in
gssa-xml/: index.html
gssa/conf/: gssa.yml
gssa/scripts/: go-smart-simulation-server
mkdocs/: search_index.json
scripts/: glot
server/database/: index.html
server/executables/: index.html
server/overview/: index.html
server/router/: index.html
server/transferrers/: index.html
src/glot/: actions.py  connector.py
tests/: .gitignore  test_comparator.py  test_server.py
(+32 files in other folders)
